--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -141,6 +141,9 @@ reward_model:
   ulysses_sequence_parallel_size: 1 # sp size
   use_dynamic_bsz: ${critic.use_dynamic_bsz}
   forward_max_token_len_per_gpu: ${critic.forward_max_token_len_per_gpu}
+  structure_format_score: 0
+  final_format_score: 0
+  retrieval_score: 0
 
 retriever:
   url: "http://127.0.0.1:8000/retrieve"
