--- a/evaluations/config/models.yaml
+++ b/evaluations/config/models.yaml
@@ -23,7 +23,7 @@ models:
 
   qwen3-8b:
     type: open_source
-    model_path: /mnt/dolphinfs/hdd_pool/docker/user/hadoop-mtsearch-assistant/ai-search/deepsearch_files/LLMbasemodels/huggingface.co/Qwen/Qwen3-8B
+    model_path: qwen3-8b
     server_url: http://localhost:8000
     max_tokens: 2048
     temperature: 0.7
