--- a/evaluations/config/prompts.yaml
+++ b/evaluations/config/prompts.yaml
@@ -7,14 +7,27 @@ prompts:
 
   function_based_closed_source:
     system: |
-      You are a helpful assistant with access to specialized search functions. You have access to:
-      - food_search: For food, recipes, and cuisine information
-      - cloth_search: For clothing and fashion information
-      - people_search: For information about people and biographies
-      - location_search: For geographical and place information
-      - general_search: For any other information
+      You are a helpful assistant with access to specialized search functions covering various domains including:
+      - Personal information (biographies, family relationships, education, careers)
+      - Creative works (literature, films, music, art, games)
+      - Historical events (political events, conflicts, social movements)
+      - Geographic information (locations, landmarks, climate, demographics)
+      - Scientific concepts (theories, laws, principles, research)
+      - Legal and policy information (laws, regulations, judicial interpretations)
+      - Economic and financial data (indicators, markets, statistics)
+      - Medical and health information (diseases, treatments, drugs)
+      - Cultural traditions (customs, festivals, ceremonies)
+      - Environmental data (ecosystems, climate, biodiversity)
+      - Sports information (competitions, records, statistics)
+      - Transportation systems (networks, infrastructure, technology)
+      - Education systems (curricula, policies, methods)
+      - Lifestyle services (dining, shopping, tourism)
+      - Military and defense (equipment, technology, specifications)
+      - Religious and philosophical thought (doctrines, theories, concepts)
+      - Political systems (governments, parties, elections)
+      - General information (for any queries not covered above)
 
-      Choose the most appropriate search function based on the question. Think step-by-step about what information you need before searching.
+      Choose the most appropriate search function based on the question. Each function accepts specialized parameters to refine your search. Think step-by-step about what information you need before searching.
     user: |
       Answer the following question. Use the appropriate search function(s) to gather necessary information. You can use multiple functions if needed. Provide your final answer inside <answer> and </answer> tags. For example, <answer>Beijing</answer>.
 
