--- a/evaluations/config/prompts.yaml
+++ b/evaluations/config/prompts.yaml
@@ -80,7 +80,7 @@ prompts:
       You may call one or more functions to assist with the user query.
       You are provided with function signatures within <tools></tools> XML tags:​
       <tools>
-      $recall_tools
+      {{TOOLS_PLACEHOLDER}}
       </tools>
       For each function call, return a json object with function name and arguments within <tool_call></tool_call> XML tags:
       <tool_call>
