--- a/evaluations/results/gpt-4_function_20250918_104723/config.json
+++ b/evaluations/results/gpt-4_function_20250918_104723/config.json
@@ -1,8 +1,8 @@
 {
-  "model": "gpt-4",
+  "model": "qwen3-8b",
   "method": "function",
   "datasets": [
     "bamboogle"
   ],
-  "timestamp": "20250918_104723"
+  "timestamp": "20250920_023635"
 }
